[package]
name = "lib-shim-v2"
version = "0.1.0"
authors = ["Huawei iSula Team"]
edition = "2018"
build = "build.rs"
description = "as a shim V2 ttrpc client, it is called by iSulad and written in rust"
license = "Mulan PSL v2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.1.0"
bytes = "0.4.11"
libc = "0.2.71"
byteorder = "1.3.2"
log = "0.4.8"
nix = "0.16.1"
ttrpc = "0.8.2"
lazy_static = "1.4.0"


[build-dependencies]
protoc-rust = "2.28.0"
protobuf = "2.28.0"
protobuf-codegen = "3.2.0"
cmd_lib = "0.7.8"
ttrpc-codegen = "0.4.2"

[lib]
name = "shim_v2"
crate-type = ["dylib"]

